src/components/layouts/GNB/gnb.module.scss
@use 'styles/constants/colors';
@use 'styles/constants/levels';

.wrapper {
  position: fixed;
  z-index: levels.$GNB;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 80px;
  padding-right: 40px;
  padding-left: 10px;
  border-bottom: 1px solid colors.$GRAY5;

  .leftWing {
    display: flex;
    align-items: center;
    justify-content: center;

    .logo img {
      height: 80px;
    }
  }

  .rightWing {
    display: flex;
    align-items: center;
    justify-content: center;

    .username {
      margin-left: 20px;
      font-size: 16px;

      &:hover {
        text-decoration: underline;
      }
    }

    .themeButton {
      width: 30px;
      height: 30px;
      border-radius: 50%;
    }
  }
}

.lightMode {
  color: colors.$GRAY9;
  background-color: colors.$BG_W;

  .themeButton {
    fill: colors.$GRAY9;

    &:hover {
      background-color: colors.$GRAY1;
    }
  }

  .username {
    color: colors.$GRAY9;
  }
}

.darkMode {
  color: colors.$GRAY0;
  background-color: colors.$BG_DARK;

  .themeButton {
    fill: colors.$GRAY0;

    &:hover {
      background-color: colors.$GRAY7;
    }
  }

  .username {
    color: colors.$GRAY0;
  }
}

